# vle

./: .gitignore  CLAUDE.md  LICENSE  MODERNIZATION_PLAN.md  PASCAL_VB6_COMPARISON.md  README.md  ROADMAP.md  TODO.md
.claude/: settings.json
data/: schema.sql
deploy/: .env.example  FAILOVER.md  NOTEBOOKS.md  README.md
deploy/compose/: docker-compose.yml  jupyterhub_config.py
deploy/docker/: Dockerfile.jupyterhub  Dockerfile.notebook
deploy/scripts/: deploy.sh  promote-standby.sh  seed-user-home.sh
docs/en/: SETUP.md
engine/: Cargo.toml
engine/src/: activity.rs  eos.rs  lib.rs  mixing.rs  saturation.rs  types.rs
legacy/pascal/: TERMOI.PAS  TERMOII.PAS  TERMOIII.PAS  TERMOIV.PAS  TERMOV.PAS  TERMOVI.PAS
legacy/vb6/: Controles.bas  McommonFunctions.bas  clsActivityMulticomp.cls  clsActivityProps.cls  clsAllProps.cls  clsCriticalProps.cls  clsFilter.cls  clsFlow.cls  clsLVE.cls  clsOtherProps.cls  clsProperties.cls  clsPropertyDescription.cls  clsQbics.cls  clsQbicsMulticomp.cls  clsQbicsProps.cls  clsQbicsPure.cls  clsReferencesSt.cls  clsSatPressureSolver.cls  clsTolerances.cls  clsVirial.cls  clsVirialMulticomp.cls  coclsProperties.cls  colclsActivityProps.cls  colclsCriticalProps.cls  colclsOtherProps.cls  colclsQbicsProps.cls  (+1 more)
notebooks/: 00_component_database.ipynb  index.ipynb
python/: pyproject.toml
python/src/vle/: __init__.py  units.py
python/src/vle/cli/: __init__.py  main.py
python/src/vle/db/: __init__.py  connection.py  models.py  queries.py  seed.py
python/src/vle/db/sql/: __init__.py  seed_chapter4.sql
python/tests/: test_db.py  test_units.py  test_units_parity.py
scripts/: README.md  build_index.py  build_notebook_00.py  cross_validate_coolprop.py  extract_component_data.py
units/: Cargo.toml
units/src/: lib.rs  parser.rs  registry.rs  toml_loader.rs  vle_units.rs
units/tests/: conversions.rs
(+31 files in other folders)
